[gd_scene load_steps=6 format=3 uid="uid://cwxe37yeyx2cy"]

[ext_resource type="Script" uid="uid://bq4tg3ub3kl40" path="res://niveis_1.gd" id="1_4y5ch"]
[ext_resource type="Texture2D" uid="uid://rwpsbgom5abk" path="res://arrow back.png" id="1_dbqyu"]
[ext_resource type="Texture2D" uid="uid://bd61g6fiuwms8" path="res://minimal3.webp" id="2_06bbr"]
[ext_resource type="Script" uid="uid://bnwckymgyx8ad" path="res://minimal_3.gd" id="3_vf0n3"]
[ext_resource type="Texture2D" uid="uid://bnsb7itllfda5" path="res://assets/DungeonCaveQuest.png" id="4_vf0n3"]

[node name="Node2D" type="Node2D"]
position = Vector2(210, 304)
script = ExtResource("1_4y5ch")

[node name="Minimal4" type="Sprite2D" parent="."]
position = Vector2(364, 14)
scale = Vector2(1.89352, 1.83882)
texture = ExtResource("2_06bbr")
script = ExtResource("3_vf0n3")

[node name="Minimal3" type="Sprite2D" parent="."]
position = Vector2(368.5, 33)
scale = Vector2(0.559487, 0.466154)
texture = ExtResource("4_vf0n3")
script = ExtResource("3_vf0n3")

[node name="Label" type="Label" parent="Minimal3"]
offset_left = -501.352
offset_top = -358.251
offset_right = -58.3522
offset_bottom = -335.251
theme_override_font_sizes/font_size = 35
text = "Os níveis serão liberados conforme você avançar no jogo!"

[node name="UI" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="Label" type="Label" parent="UI"]
layout_mode = 0
offset_left = 73.0
offset_top = -214.0
offset_right = 855.0
offset_bottom = -131.0
theme_override_font_sizes/font_size = 60
text = "Dungeon Cave Quest"

[node name="VBoxContainer" type="VBoxContainer" parent="."]
offset_left = -113.0
offset_top = -41.0
offset_right = 651.0
offset_bottom = 225.0

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="ButtonNivel1" type="Button" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 30
text = "Nível 01"

[node name="ButtonNivel2" type="Button" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 30
text = "Nível 02"

[node name="ButtonNivel3" type="Button" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 30
text = "Nível 03"

[node name="ButtonNivel4" type="Button" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 30
text = "Nível 04"

[node name="ButtonNivel5" type="Button" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 30
text = "Nível 05"

[node name="ButtonNivel6" type="Button" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 30
text = "Nível 06"

[node name="HBoxContainer2" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="ButtonNivel7" type="Button" parent="VBoxContainer/HBoxContainer2"]
layout_mode = 2
theme_override_font_sizes/font_size = 30
text = "Nível 07"

[node name="ButtonNivel8" type="Button" parent="VBoxContainer/HBoxContainer2"]
layout_mode = 2
theme_override_font_sizes/font_size = 30
text = "Nível 08"

[node name="ButtonNivel9" type="Button" parent="VBoxContainer/HBoxContainer2"]
layout_mode = 2
theme_override_font_sizes/font_size = 30
text = "Nível 09"

[node name="ButtonNivel10" type="Button" parent="VBoxContainer/HBoxContainer2"]
layout_mode = 2
theme_override_font_sizes/font_size = 30
text = "Nível 10"

[node name="ButtonNivel11" type="Button" parent="VBoxContainer/HBoxContainer2"]
visible = false
layout_mode = 2
theme_override_font_sizes/font_size = 30
text = "Nível 11"

[node name="ButtonNivel12" type="Button" parent="VBoxContainer/HBoxContainer2"]
visible = false
layout_mode = 2
theme_override_font_sizes/font_size = 30
text = "Nível 12"

[node name="HBoxContainer3" type="HBoxContainer" parent="VBoxContainer"]
visible = false
layout_mode = 2

[node name="ButtonNivel13" type="Button" parent="VBoxContainer/HBoxContainer3"]
layout_mode = 2
theme_override_font_sizes/font_size = 30
text = "Nível 13"

[node name="ButtonNivel14" type="Button" parent="VBoxContainer/HBoxContainer3"]
layout_mode = 2
theme_override_font_sizes/font_size = 30
text = "Nível 14"

[node name="ButtonNivel15" type="Button" parent="VBoxContainer/HBoxContainer3"]
layout_mode = 2
theme_override_font_sizes/font_size = 30
text = "Nível 15"

[node name="ButtonNivel16" type="Button" parent="VBoxContainer/HBoxContainer3"]
layout_mode = 2
theme_override_font_sizes/font_size = 30
text = "Nível 16"

[node name="ButtonNivel17" type="Button" parent="VBoxContainer/HBoxContainer3"]
layout_mode = 2
theme_override_font_sizes/font_size = 30
text = "Nível 17"

[node name="ButtonNivel18" type="Button" parent="VBoxContainer/HBoxContainer3"]
layout_mode = 2
theme_override_font_sizes/font_size = 30
text = "Nível 18"

[node name="HBoxContainer4" type="HBoxContainer" parent="VBoxContainer"]
visible = false
layout_mode = 2

[node name="ButtonNivel19" type="Button" parent="VBoxContainer/HBoxContainer4"]
layout_mode = 2
theme_override_font_sizes/font_size = 30
text = "Nível 19"

[node name="ButtonNivel20" type="Button" parent="VBoxContainer/HBoxContainer4"]
layout_mode = 2
theme_override_font_sizes/font_size = 30
text = "Nível 20"

[node name="ButtonNivel21" type="Button" parent="VBoxContainer/HBoxContainer4"]
layout_mode = 2
theme_override_font_sizes/font_size = 30
text = "Nível 21"

[node name="ButtonNivel22" type="Button" parent="VBoxContainer/HBoxContainer4"]
layout_mode = 2
theme_override_font_sizes/font_size = 30
text = "Nível 22"

[node name="ButtonNivel23" type="Button" parent="VBoxContainer/HBoxContainer4"]
layout_mode = 2
theme_override_font_sizes/font_size = 30
text = "Nível 23"

[node name="ButtonNivel24" type="Button" parent="VBoxContainer/HBoxContainer4"]
layout_mode = 2
theme_override_font_sizes/font_size = 30
text = "Nível 24"

[node name="HBoxContainer5" type="HBoxContainer" parent="VBoxContainer"]
visible = false
layout_mode = 2

[node name="ButtonNivel25" type="Button" parent="VBoxContainer/HBoxContainer5"]
layout_mode = 2
theme_override_font_sizes/font_size = 30
text = "Nível 25"

[node name="ButtonNivel26" type="Button" parent="VBoxContainer/HBoxContainer5"]
layout_mode = 2
theme_override_font_sizes/font_size = 30
text = "Nível 26"

[node name="ButtonNivel27" type="Button" parent="VBoxContainer/HBoxContainer5"]
layout_mode = 2
theme_override_font_sizes/font_size = 30
text = "Nível 27"

[node name="ButtonNivel28" type="Button" parent="VBoxContainer/HBoxContainer5"]
layout_mode = 2
theme_override_font_sizes/font_size = 30
text = "Nível 28"

[node name="ButtonNivel29" type="Button" parent="VBoxContainer/HBoxContainer5"]
layout_mode = 2
theme_override_font_sizes/font_size = 30
text = "Nível 29"

[node name="ButtonNivel30" type="Button" parent="VBoxContainer/HBoxContainer5"]
layout_mode = 2
theme_override_font_sizes/font_size = 30
text = "Nível 30"

[node name="ArrowBack" type="TextureButton" parent="."]
offset_left = -120.0
offset_top = -250.0
offset_right = 392.0
offset_bottom = 262.0
scale = Vector2(0.243164, 0.200195)
texture_normal = ExtResource("1_dbqyu")
