extends Node2D

var arrow_back: TextureButton
var button_hover_script: GDScript

# Dicion√°rio para mapear nomes dos n√≠veis para cenas
var level_scenes = {
	"nivel1": "res://Jogo1Fase1.tscn",
	"nivel2": "res://Jogo1Fase2.tscn",
	"nivel3": "res://Jogo1Fase3.tscn",
	"nivel4": "res://Jogo1Fase4.tscn",
	"nivel5": "res://Jogo1Fase5.tscn",
	"nivel6": "res://Jogo1Fase6.tscn",
	"nivel7": "res://Jogo1Fase7.tscn",
	"nivel8": "res://Jogo1Fase8.tscn",
	"nivel9": "res://Jogo1Fase9.tscn",
	"nivel10": "res://Jogo1Fase10.tscn"
}

@onready var level_buttons = {
	"nivel1": $VBoxContainer/HBoxContainer/ButtonNivel1,
	"nivel2": $VBoxContainer/HBoxContainer/ButtonNivel2,
	"nivel3": $VBoxContainer/HBoxContainer/ButtonNivel3,
	"nivel4": $VBoxContainer/HBoxContainer/ButtonNivel4,
	"nivel5": $VBoxContainer/HBoxContainer/ButtonNivel5,
	"nivel6": $VBoxContainer/HBoxContainer/ButtonNivel6,
	"nivel7": $VBoxContainer/HBoxContainer2/ButtonNivel7,
	"nivel8": $VBoxContainer/HBoxContainer2/ButtonNivel8,
	"nivel9": $VBoxContainer/HBoxContainer2/ButtonNivel9,
	"nivel10": $VBoxContainer/HBoxContainer2/ButtonNivel10
}

func _ready():
	print("=== INICIANDO SELE√á√ÉO DE N√çVEIS JOGO 1 ===")
	
	# CORRE√á√ÉO: Verificar se est√° na √°rvore
	if not is_inside_tree():
		await tree_entered
	
	# CORRE√á√ÉO: Remover limpeza de cache local (n√£o √© mais necess√°ria)
	# limpar_cache_local()
	
	# Conectar bot√£o de voltar
	arrow_back = $ArrowBack
	if arrow_back:
		arrow_back.pressed.connect(_on_arrow_back_pressed)
	else:
		print("Aviso: ArrowBack n√£o encontrado")
	
	# CORRE√á√ÉO: Verificar autentica√ß√£o antes de carregar progresso
	if not SessionManager or not SessionManager.is_authenticated():
		print("‚ùå Usu√°rio n√£o autenticado - redirecionando para login")
		show_authentication_error()
		return
	
	# Conectar sinais do progress manager
	if ProgressManager:
		ProgressManager.progress_loaded.connect(_on_progress_loaded)
		ProgressManager.level_access_checked.connect(_on_level_access_checked)
		ProgressManager.progress_saved.connect(_on_progress_saved)
		
		print("‚úÖ ProgressManager conectado - carregando progresso para jogo 1")
		# Carregar progresso do usu√°rio para o jogo 1 (Estruturas de Dados)
		ProgressManager.load_user_progress("1")
	else:
		print("‚ùå Erro: ProgressManager n√£o encontrado - verifique configura√ß√£o do autoload")
		# Fallback: garantir pelo menos o primeiro n√≠vel desbloqueado
		_ensure_basic_progress()
	
	# Conectar bot√µes de n√≠vel
	_setup_level_buttons()
	
	# Configurar efeito hover
	button_hover_script = preload("res://ButtonHoverEffect.gd")
	
	# CORRE√á√ÉO: Aplicar efeito hover de forma segura
	call_deferred("aplicar_efeito_hover_todos_botoes")

# CORRE√á√ÉO: Fun√ß√£o para garantir progresso b√°sico
func _ensure_basic_progress():
	print("üõ°Ô∏è  Garantindo progresso b√°sico para jogo 1")
	for level_name in level_buttons:
		var button = level_buttons[level_name]
		if button:
			if level_name == "nivel1":
				button.text = level_name.replace("nivel", "N√≠vel ")
				button.modulate = Color(1.0, 1.0, 1.0)
				button.disabled = false
			else:
				button.text = level_name.replace("nivel", "N√≠vel ") + " üîí"
				button.modulate = Color(0.5, 0.5, 0.5)
				button.disabled = true

func _setup_level_buttons():
	# Conectar cada bot√£o ao seu n√≠vel correspondente
	for level_name in level_buttons:
		var button = level_buttons[level_name]
		if button:
			# Remover conex√µes existentes para evitar duplica√ß√£o
			if button.is_connected("pressed", _on_level_button_pressed):
				button.disconnect("pressed", _on_level_button_pressed)
			
			button.pressed.connect(_on_level_button_pressed.bind(level_name))
			print("Conectado bot√£o: ", level_name)
		else:
			print("Aviso: Bot√£o n√£o encontrado para ", level_name)

func _on_arrow_back_pressed():
	print("‚Üê Voltando para tela principal...")
	if is_inside_tree():
		get_tree().change_scene_to_file("res://jogar.tscn")

func _on_level_button_pressed(level_name: String):
	print("üéÆ Tentando acessar n√≠vel: ", level_name)
	
	# CORRE√á√ÉO: Verificar autentica√ß√£o primeiro
	if not SessionManager or not SessionManager.is_authenticated():
		print("‚ùå Usu√°rio n√£o autenticado")
		show_authentication_error()
		return
	
	# Verifica√ß√£o local primeiro
	if ProgressManager and ProgressManager.has_access_to_level(level_name, "1"):
		_open_level(level_name)
	else:
		# Verificar com o servidor
		if ProgressManager:
			print("üîç Verificando acesso com servidor...")
			ProgressManager.check_level_access(level_name, "1")
		else:
			print("‚ùå Erro: ProgressManager n√£o dispon√≠vel")
			show_error_message("Erro interno - tente novamente")

func _on_progress_loaded(game_id: String):
	if game_id == "1":  # S√≥ atualizar se for do jogo 1
		print("üîÑ Atualizando interface com progresso carregado")
		update_level_buttons_visual()
		
		

# CORRE√á√ÉO: Nova fun√ß√£o para quando progresso √© salvo
func _on_progress_saved(level_name: String, score: int):
	print("üíæ Progresso salvo - recarregando interface")
	# Recarregar progresso para atualizar a interface
	if ProgressManager:
		ProgressManager.load_user_progress("1")

func _on_level_access_checked(level_name: String, access_granted: bool):
	if access_granted:
		print("‚úÖ Acesso concedido pelo servidor: ", level_name)
		_open_level(level_name)
	else:
		print("‚ùå Acesso negado pelo servidor: ", level_name)
		show_access_denied_message(level_name)

func update_level_buttons_visual():
	if not ProgressManager:
		print("Erro: ProgressManager n√£o dispon√≠vel para atualizar visual")
		return
	
	for level_name in level_buttons:
		var button = level_buttons[level_name]
		if button:
			var level_data = ProgressManager.get_level_data(level_name, "1")
			var is_unlocked = ProgressManager.has_access_to_level(level_name, "1")
			var is_completed = level_data.get("completed", false) if level_data else false
			var score = level_data.get("score", 0) if level_data else 0
			
			# Configurar apar√™ncia baseada no estado
			if is_completed:
				button.text = level_name.replace("nivel", "N√≠vel ") + " ‚úÖ\n" + str(score) + " pts"
				button.modulate = Color(0.5, 1.0, 0.5)  # Verde para conclu√≠do
				button.disabled = false
				print("‚úÖ N√≠vel conclu√≠do: ", level_name, " - Score: ", score)
			elif is_unlocked:
				button.text = level_name.replace("nivel", "N√≠vel ")
				button.modulate = Color(1.0, 1.0, 1.0)  # Normal para desbloqueado
				button.disabled = false
				print("üîì N√≠vel desbloqueado: ", level_name)
			else:
				button.text = level_name.replace("nivel", "N√≠vel ") + " üîí"
				button.modulate = Color(0.5, 0.5, 0.5)  # Cinza para bloqueado
				button.disabled = true
				print("üîí N√≠vel bloqueado: ", level_name)

func _open_level(level_name: String):
	print("üöÄ Abrindo n√≠vel: ", level_name)
	
	if level_name in level_scenes:
		var scene_path = level_scenes[level_name]
		if is_inside_tree():
			var error = get_tree().change_scene_to_file(scene_path)
			if error != OK:
				print("‚ùå Erro ao carregar cena: ", scene_path, " - C√≥digo: ", error)
				show_error_message("Erro ao carregar n√≠vel")
	else:
		print("‚ùå Cena n√£o encontrada para: ", level_name)
		show_error_message("N√≠vel n√£o encontrado")

func show_access_denied_message(level_name: String):
	var alert = AcceptDialog.new()
	alert.title = "N√≠vel Bloqueado"
	alert.dialog_text = "Complete o n√≠vel anterior para desbloquear " + level_name.replace("nivel", "N√≠vel ")
	add_child(alert)
	alert.popup_centered()
	alert.confirmed.connect(alert.queue_free)

# CORRE√á√ÉO: Nova fun√ß√£o para mostrar erro de autentica√ß√£o
func show_authentication_error():
	var alert = AcceptDialog.new()
	alert.title = "Erro de Autentica√ß√£o"
	alert.dialog_text = "Voc√™ precisa fazer login para acessar os n√≠veis."
	add_child(alert)
	alert.popup_centered()
	alert.confirmed.connect(func():
		if is_inside_tree():
			get_tree().change_scene_to_file("res://Login.tscn")
		alert.queue_free()
	)

# CORRE√á√ÉO: Nova fun√ß√£o para mostrar erro gen√©rico
func show_error_message(message: String):
	var alert = AcceptDialog.new()
	alert.title = "Erro"
	alert.dialog_text = message
	add_child(alert)
	alert.popup_centered()
	alert.confirmed.connect(alert.queue_free)

func aplicar_efeito_hover_todos_botoes():
	# CORRE√á√ÉO: Verificar se ainda estamos na √°rvore
	if not is_inside_tree():
		return
	
	var botoes = _buscar_todos_botoes(self)
	
	for botao in botoes:
		if is_instance_valid(botao) and botao.is_inside_tree() and not botao.has_node("ButtonHoverEffect"):
			var effect_node = Node.new()
			effect_node.set_script(button_hover_script)
			botao.add_child(effect_node)
			effect_node.name = "ButtonHoverEffect"

func _buscar_todos_botoes(node: Node) -> Array:
	var botoes = []
	
	# CORRE√á√ÉO: Verificar se o n√≥ √© v√°lido e est√° na √°rvore
	if not is_instance_valid(node) or not node.is_inside_tree():
		return botoes
	
	if node is BaseButton and node.visible:
		botoes.append(node)
	
	for child in node.get_children():
		botoes.append_array(_buscar_todos_botoes(child))
	
	return botoes

# CORRE√á√ÉO: Removida a fun√ß√£o limpar_cache_local (n√£o √© mais necess√°ria)
# func limpar_cache_local():
# 	# Limpar savegame local para for√ßar uso do servidor
# 	var save = ConfigFile.new()
# 	var err = save.load("user://savegame.cfg")
# 	if err == OK:
# 		# Remover todas as se√ß√µes relacionadas aos n√≠veis
# 		for section in save.get_sections():
# 			if section.begins_with("nivel"):
# 				save.erase_section(section)
# 		save.save("user://savegame.cfg")
# 		print("üßπ Cache local limpo")

# CORRE√á√ÉO: Limpar conex√µes quando a cena for removida
func _exit_tree():
	# Desconectar sinais do ProgressManager
	if ProgressManager:
		if ProgressManager.progress_loaded.is_connected(_on_progress_loaded):
			ProgressManager.progress_loaded.disconnect(_on_progress_loaded)
		if ProgressManager.level_access_checked.is_connected(_on_level_access_checked):
			ProgressManager.level_access_checked.disconnect(_on_level_access_checked)
		if ProgressManager.progress_saved.is_connected(_on_progress_saved):
			ProgressManager.progress_saved.disconnect(_on_progress_saved)
